2008-11-01  Alper KANAT  <alperkanat@gmail.com>

	* TODO: added new stuff..
	* blog/templatetags/blog_filters.py: twitter specific failures should be
	gone now..
	* frontpage/models.py, templates/frontpage/base.html: added a link on top of
	the page due to requests coming from the visitors..
	* media/js/fckeditor.js: some adjustments for fckeditor..
	* templates/users/login.html: login page shows the errors now but there are
	more things that needs to be fixed.

2008-10-23  Alper KANAT  <alperkanat@gmail.com>

	* media/js/fckeditor_inclusion.js, blog/admin.py, frontpage/admin.py:
	removed all overwritten admin templates and used a better django way of
	inclusion of js files in the admin.py of models..
	* TODO: added new missions..
	* media/js/ff.js, media/js/raptiye.js, media/js/fckeditor.js: added license
	information to the head of each file..
	* settings-example.py: set the version number to 1.0.1

2008-10-22  Alper KANAT  <alperkanat@gmail.com>

	* media/js/ff.js: added some new lines to the promo..
	* templates/admin/blog/, templates/admin/flatpages/,
	templates/admin/frontpage/: admin templates have been modified to include
	fckeditor with some options..
	* media/js/fckeditor.js: all settings necessary for fckeditor are in this
	file..
	* contrib/fckeditor/ and a link to it (/media/js/fckeditor) is added.

2008-10-13  Alper KANAT  <alperkanat@gmail.com>

	* blog/admin.py, /media/js/tiny_mce: removed tinymce from raptiye.. will
	integrate fckeditor instead..

2008-10-12  Alper KANAT  <alperkanat@gmail.com>

	* polls/templatetags/poll_filters.py: fixed a bug about polls..

2008-10-09  Alper KANAT  <alperkanat@gmail.com>

	* forgot to mention about the fonts..
	* comments/views.py, extra/captcha.py, extra/captcha_test.py: capcha is even
	stronger and easier to read.. (working with more fonts and font sizes)
	* comments/views.py, templates/blog/comments.html: anonymous users can now
	subscribe to the blog posts for notification..