@@ -33,10 +33,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 			<img src="/media/images/flickr.png" border="0">
 		</a>
 		&nbsp;
-		<a href="http://www.linkedin.com/in/alperkanat" target="_blank" title="linkedin sayfamı ziyaret etmek için tıklayın..">
-			<img src="/media/images/mylinkedin.png" border="0">
-		</a>
-		&nbsp;
 		<a href="http://twitter.com/tunix" target="_blank" title="twitter sayfamı ziyaret etmek için tıklayın..">
 			<img src="/media/images/twitter.png" border="0">
 		</a>
