@@ -19,32 +19,19 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 {% load blog_filters %}
 
 {% spaceless %}
-<a href="http://www.linkedin.com/shareArticle?mini=true&url={{ entry.get_full_url }}&title={{ entry.title }}&summary={{ entry.content|truncatewords_html:150 }}&source=http://raptiye.org" target="_blank"
-	title="bu yazıyı linkedin'de paylaşmak için tıklayın..">
-	<img src="/media/images/linkedin.png" border="0">
-</a>
-&nbsp;
-<script type="text/javascript">
-	digg_url = '{{ entry.get_full_url }}';
-	digg_title = '{{ entry.title }}';
-	digg_bodytext = '{{ entry.content|truncatewords_html:150|escapejs }}';
-	digg_media = 'news';
-	digg_topic = 'software';
-	digg_skin = 'icon';
-	digg_bgcolor = 'transparent';
-	digg_window = 'new';
+
+<!-- ADDTHIS BUTTON BEGIN -->
+<script type="text/javascript" charset="utf-8">
+	addthis_pub = "tunix"
+	addthis_brand = "raptiye"
+	addthis_offset_top = 2
+	addthis_options = "delicious, digg, facebook, twitter, google, myspace, live, reddit, slashdot, stumbleupon, technorati, email, favorites"
 </script>
-<script src="http://digg.com/tools/diggthis.js" type="text/javascript"></script>
-&nbsp;
-<a href="http://delicious.com/post" onclick="window.open('http://delicious.com/post?v=5&noui&jump=close&url='+encodeURIComponent(location.href)+'&title='+encodeURIComponent(document.title), 'delicious','toolbar=no,width=550,height=550'); return false;" target="_blank" title="bu yazıyı del.ici.ous'taki favorileriniz arasına eklemek için tıklayın..">
-	<img src="/media/images/delicious.gif" border="0">
+
+<a href="http://www.addthis.com/bookmark.php" onMouseOver="return addthis_open(this, '', '[URL]', '[TITLE]')" onMouseOut="addthis_close()" onClick="return addthis_sendto()">
+	<img src="http://s7.addthis.com/button1-bm.gif" width="125" height="16" border="0" alt="" />
 </a>
-&nbsp;
-<a href="http://technorati.com/faves?sub=addfavbtn&amp;add=http://raptiye.org/blog" target="_blank" title="{{ mainpage.title }}'yi technorati favorileriniz arasına eklemek için tıklayın!">
-	<img src="/media/images/technorati.png" border="0">
-</a>
-&nbsp;
-<a href="http://www.stumbleupon.com/submit?url={{ entry.get_full_url }}%26title%3DThe%2BArticle%2BTitle" target="_blank" title="{{ mainpage.title }}'yi stumbleupon'da görmek istiyorsanız tıklayın!">
-	<img src="/media/images/stumbleupon.png" border="0">
-</a>
+<script type="text/javascript" src="http://s7.addthis.com/js/152/addthis_widget.js"></script>
+<!-- ADDTHIS BUTTON END -->
+
 {% endspaceless %}
